--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tailwindcss/vite": "^4.1.7",
     "@tanstack/react-table": "^8.21.3",
     "axios": "^1.9.0",
+    "file-saver": "^2.0.5",
     "framer-motion": "^12.10.4",
     "leaflet": "^1.9.4",
     "leaflet-draw": "^1.0.4",
