--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "@microsoft/signalr": "^8.0.7",
     "@reduxjs/toolkit": "^2.7.0",
     "@tailwindcss/vite": "^4.1.7",
+    "@tanstack/react-table": "^8.21.3",
     "axios": "^1.9.0",
     "file-saver": "^2.0.5",
     "framer-motion": "^12.10.4",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "leaflet": "^1.9.4",
     "leaflet-draw": "^1.0.4",
     "leaflet-routing-machine": "^3.2.12",
@@ -32,7 +35,8 @@
     "react-select": "^5.10.2",
     "react-window": "^1.8.11",
     "recharts": "^3.0.2",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
