--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.5.3",
     "react-select": "^5.10.2",
+    "react-virtualized": "^9.22.6",
     "react-window": "^1.8.11",
     "recharts": "^3.0.2",
     "redux-persist": "^6.0.0",
