--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-# VITE_API_BASE_URL=https://localhost:7145/
-VITE_API_BASE_URL=http://110.93.209.24:8001/
+VITE_API_BASE_URL=https://localhost:7145/
+# VITE_API_BASE_URL=http://110.93.209.24:8001/
 
 
