--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "axios": "^1.9.0",
     "file-saver": "^2.0.5",
     "framer-motion": "^12.23.12",
-    "jspdf": "^3.0.1",
+    "jspdf": "^3.0.2",
     "jspdf-autotable": "^5.0.2",
     "leaflet": "^1.9.4",
     "leaflet-draw": "^1.0.4",
@@ -36,6 +36,7 @@
     "react-select": "^5.10.2",
     "react-virtualized": "^9.22.6",
     "react-window": "^1.8.11",
+    "react-window-infinite-loader": "^1.0.10",
     "recharts": "^3.0.2",
     "redux-persist": "^6.0.0",
     "xlsx": "^0.18.5"
